started css designing

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -1,4 +1,14 @@
-<!--loading screen-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            h1 {
+                color: black;
+                text-align: center;
+            }
+        </style>
+    </head>
+    <!--loading screen-->
 <div class="loading-screen" id="loading-screen">
         <div class="loading-ui">
                 <div class="spinner"></div>
@@ -17,6 +27,7 @@
         <h3>Disclaimer! Due to varying times and section availabilities we may not be able to create an exact match.</h3>
 </section>
 
+<!--Filter and Upload panel-->
 <section id="controls">
         <div id="upload=panel" class="card">
                 <h2>Submit your TDA</h2>
@@ -61,10 +72,12 @@
         <div id="schedule-panel">
                 <h2>Generated Schedule</h2>
                 <p id="schedule-note">
-                        We’ll suggest a schedule that tries to match your preferred days, times, and units.
+                        We'll suggest a schedule that tries to match your preferred days, times, and units.
                 </p>
                 <div id="schedule-drop-area">
                         <em>Your schedule will appear here after you generate it.</em>
                 </div>
         </div>
 </section>
+
+</html>
