--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="open-classes-panel">
                 <h2>Open Classes</h2>
                 <div class="search-bar">
-                        <input type="text" id="search-input" placeholder="Search by class code, instructor, or days...">
+                        <input type="text" id="search-input" placeholder="Search by class code or class name">
                 </div>
                 <div id="open-classes-list">
                         <em>No classes yet. Upload your TDA to generate options.</em>
@@ -76,6 +76,7 @@
                 </p>
                 <div id="schedule-drop-area">
                         <em>Your schedule will appear here after you generate it.</em>
+                        <a href="url">Visit this professor's Rate My Professor page</a>
                 </div>
         </div>
 </section>
