--- a/index.html
+++ b/index.html
@@ -1,199 +1,14 @@
 <!DOCTYPE html>
 <html>
         <head>
-                <style>
-                        .hidden {
-                        display: none;
-                        }
-
-                        /* Overall page feel */
-                        body {
-                        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-                        margin: 0;
-                        padding: 20px;
-                        background-color: #f5f5f5;
-                        }
-
-                        /* Intro section */
-                        #intro {
-                        max-width: 800px;
-                        margin: 0 auto 20px auto;
-                        text-align: center;
-                        }
-
-                        #intro h2 {
-                        margin-top: 16px;
-                        }
-
-                        /* Controls section: upload + filters side by side */
-                        #controls {
-                        max-width: 1000px;
-                        margin: 0 auto 20px auto;
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 20px;
-                        }
-
-                        /* Each panel (upload, filters, etc.) */
-                        .card,
-                        #upload-panel,
-                        #filter-panel {
-                        flex: 1 1 320px;
-                        min-width: 280px;
-                        background-color: #ffffff;
-                        border-radius: 8px;
-                        border: 1px solid #ddd;
-                        padding: 16px;
-                        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-                        }
-
-                        .helper-text {
-                        font-size: 0.85rem;
-                        color: #666;
-                        }
-
-                        /* Days checkboxes row */
-                        .days label {
-                        margin-right: 8px;
-                        display: inline-block;
-                        margin-bottom: 4px;
-                        }
-
-                        /* Results: open classes + schedule side by side */
-                        #results {
-                        max-width: 1000px;
-                        margin: 0 auto;
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 20px;
-                        }
-
-                        #open-classes-panel,
-                        #schedule-panel {
-                        flex: 1 1 320px;
-                        min-width: 280px;
-                        background-color: #ffffff;
-                        border-radius: 8px;
-                        border: 1px solid #ddd;
-                        padding: 16px;
-                        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-                        }
-
-                        /* Search bar */
-                        .search-bar {
-                        margin-bottom: 10px;
-                        }
-
-                        .search-bar input {
-                        width: 100%;
-                        padding: 6px 8px;
-                        border: 1px solid #ccc;
-                        border-radius: 4px;
-                        }
-
-                        /* Drop areas & lists */
-                        #open-classes-list,
-                        #schedule-drop-area {
-                        min-height: 140px;
-                        border: 1px dashed #ccc;
-                        border-radius: 6px;
-                        padding: 8px;
-                        background-color: #fafafa;
-                        }
-
-                        /* Class cards for open classes & schedule */
-                        .class-card {
-                        border: 1px solid #ccc;
-                        border-radius: 6px;
-                        padding: 8px;
-                        margin-bottom: 6px;
-                        background-color: #fff;
-                        cursor: grab;
-                        user-select: none;
-                        font-size: 0.9rem;
-                        }
-
-                        .class-card strong {
-                        font-size: 0.95rem;
-                        }
-
-                        .class-card.dragging {
-                        opacity: 0.6;
-                        }
-
-                        /* Highlight drop target when dragging over */
-                        .drop-target.over {
-                        border-color: #007bff;
-                        background-color: #f0f8ff;
-                        }
-
-                        /* Buttons */
-                        button {
-                        padding: 6px 12px;
-                        border-radius: 4px;
-                        border: 1px solid #007bff;
-                        background-color: #007bff;
-                        color: #fff;
-                        cursor: pointer;
-                        }
-
-                        button:hover {
-                        background-color: #005fd1;
-                        }
-
-                        /* Status text */
-                        #status-text {
-                        margin-left: 10px;
-                        font-size: 0.9rem;
-                        }
-
-                        /* Loading overlay */
-                        .loading-screen {
-                        position: fixed;
-                        inset: 0;                 /* top:0, right:0, bottom:0, left:0 */
-                        background-color: rgba(0,0,0,0.4);
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        z-index: 999;             /* on top of everything */
-                        }
-
-                        .loading-ui {
-                        background-color: #fff;
-                        padding: 20px 30px;
-                        border-radius: 10px;
-                        text-align: center;
-                        box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-                        }
-
-                        /* Spinner circle */
-                        .spinner {
-                        width: 30px;
-                        height: 30px;
-                        border: 4px solid #ddd;
-                        border-top: 4px solid #007bff;
-                        border-radius: 50%;
-                        margin: 0 auto 10px auto;
-                        animation: spin 0.8s linear infinite;
-                        }
-
-                        .loading-text {
-                        font-size: 0.95rem;
-                        }
-
-                        @keyframes spin {
-                        to {
-                        transform: rotate(360deg);
-                        }
-                        }
-                </style>
+                <link rel="stylesheet" href="style.css" />
         </head>
         <body>
         <!--loading screen-->
                 <div class="loading-screen hidden" id="loading-screen">
                         <div class="loading-ui">
                                 <div class="spinner"></div>
-                                <div class="Generating your schedule..."></div>
+                                <div class="loading-text">Generating your schedule....</div>
                         </div>
                 </div>
 
@@ -260,5 +75,6 @@
                                 </div>
                         </div>
                 </section>
+                <script src="script.js" defer></script>
         </body>
 </html>
