added scroll wheel time

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                         <h1>Titan Scheduler</h1>
                         <p>Welcome! Begin by selecting your filters or uploading your Titan Degree Audit (TDA)!</p>
 
-                        <h2>Filters and Preferences (optional)</h2>
                         <p>Choose which days and times you'd prefer to have your schedule, then we'll do our best to generate the best fit!</p>
 
                         <h3>Disclaimer! Due to varying times and section availabilities we may not be able to create an exact match.</h3>
@@ -49,6 +48,36 @@
                                         <label><input type="checkbox" class="filter-day" value="F" checked> Fri</label>
                                         <label><input type="checkbox" class="filter-day" value="S" checked> Sat</label>
                                 </div>
+                                <label>Preferred start and end times</label>
+                                <div class="time-picker">
+                                        <div class="time-picker-overlay"></div>
+                                        <div class="time-list" id="timeList">
+                                                <div class="time-item">08:00</div>
+                                                <div class="time-item">08:30</div>
+                                                <div class="time-item">09:00</div>
+                                                <div class="time-item">09:30</div>
+                                                <div class="time-item">10:00</div>
+                                                <div class="time-item">10:30</div>
+                                                <div class="time-item">11:00</div>
+                                                <div class="time-item">11:30</div>
+                                                <div class="time-item">12:00</div>
+                                                <div class="time-item">12:30</div>
+                                                <div class="time-item">13:00</div>
+                                                <div class="time-item">13:30</div>
+                                                <div class="time-item">14:00</div>
+                                                <div class="time-item">14:30</div>
+                                                <div class="time-item">15:00</div>
+                                                <div class="time-item">15:30</div>
+                                                <div class="time-item">16:00</div>
+                                                <div class="time-item">16:30</div>
+                                                <div class="time-item">17:00</div>
+                                                <div class="time-item">17:30</div>
+                                                <div class="time-item">18:00</div>
+                                                <div class="time-item">18:30</div>
+                                                <div class="time-item">19:00</div>
+                                        </div>
+                                </div>
+                                <p>Selected time: <span id="selectedTime">08:00</span></p>
                         </div>
                 </section>
 
