--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
   <p>Choose preferred days and times and we’ll generate a schedule for you.</p>
 
   <h3>Disclaimer! Due varying times and class availabilities exact matches cannot be guaranteed.</h3>
+  <img src="tuffypic.jpg" alt="tuffy">
 
   <div class="nav-buttons">
     <div></div>
-    <button class="next-button" data-next="step-controls">Get Started</button>
+    <button class="next-button get-started-btn" data-next="step-controls">
+        Get Started
+    </button>
   </div>
 </section>
 
